force-app/main/default/objects/Competitor_Product_Price__c/Competitor_Product_Price__c.object-meta.xml
<CustomObject>
    <label>Competitor Product Price</label>
    <nameField>
        <displayFormat>CPP-{000000}</displayFormat>
        <label>Competitor Product Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Product Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>