force-app/main/default/objects/Competitor_Product_Price__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filled with Opportunity Account if the Competitor Product Price has been created from the Opp Product.</description>
    <inlineHelpText>Filled with Opportunity Account if the Competitor Product Price has been created from the Opp Product.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Product Prices</relationshipLabel>
    <relationshipName>Competitor_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>