force-app/main/default/objects/Competitor_Product_Price__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>TEXT(Opp_Product__r.Opportunity__r.Application_type__c)</formula>
    <inlineHelpText>Application Type of the related Opportunity.</inlineHelpText>
    <label>Old Application Type</label>
    <type>Text</type>
</CustomField>