force-app/main/default/objects/Competitor_Product_Price__c/fields/Bundle_Offer_Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Offer_Product_Categories__c</fullName>
    <description>Select product categories of the products that are bundle-offered at this Unit Price</description>
    <inlineHelpText>Select product categories of the products that are bundle-offered at this Unit Price</inlineHelpText>
    <label>Bundle Offer Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Position &amp; Time</fullName>
            </value>
            <value>
                <fullName>Short Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>