force-app/main/default/objects/Competitor_Product_Price__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Additional information on competitor product prices</description>
    <inlineHelpText>Additional information on competitor product prices</inlineHelpText>
    <label>Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>