force-app/main/default/objects/Competitor_Product_Price__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitor Product Prices</relationshipLabel>
    <relationshipName>Competitor_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>