force-app/main/default/objects/Competitor_Product_Price__c/fields/Competitor_formula__c.field-meta.xml
<CustomField>
    <fullName>Competitor_formula__c</fullName>
    <formula>Competitor_Product__r.Competitor__r.Name</formula>
    <label>Competitor (formula)</label>
    <type>Text</type>
</CustomField>