force-app/main/default/objects/Competitor_Product_Price__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <formula>Competitor__r.Name</formula>
    <label>Competitor Name</label>
    <type>Text</type>
</CustomField>