force-app/main/default/objects/Competitor_Product_Price__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Competitor_Product__c.Competitor__c</field>
            <operation>equals</operation>
            <valueField>$Source.Competitor__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Competitor Product Prices</relationshipLabel>
    <relationshipName>Competitor_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>