force-app/main/default/objects/Competitor_Product_Price__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Opportunity Account is currently using this Competitor Product at this Unit Price USD.</description>
    <inlineHelpText>Check if the Opportunity Account is currently using this Competitor Product at this Unit Price USD.</inlineHelpText>
    <label>Incumbent</label>
    <type>Checkbox</type>
</CustomField>