force-app/main/default/objects/Competitor_Product_Price__c/fields/New_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Application_Type__c</fullName>
    <formula>TEXT(Opp_Product__r.Opportunity__r.New_Application_Type__c)</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>