force-app/main/default/objects/Competitor_Product_Price__c/fields/Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filled automatically when created from Opp Product</description>
    <inlineHelpText>Filled automatically when created from Opp Product</inlineHelpText>
    <label>Opp Product</label>
    <referenceTo>Opp_Product__c</referenceTo>
    <relationshipLabel>Competitor Product Prices</relationshipLabel>
    <relationshipName>Competitor_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>