force-app/main/default/objects/Competitor_Product_Price__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <formula>Opp_Product__r.Opportunity_Account__c</formula>
    <label>Opportunity Account</label>
    <type>Text</type>
</CustomField>