force-app/main/default/objects/Competitor_Product_Price__c/fields/Price_Information_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Information_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Populated automatically with modified date if left empty when Save.</description>
    <inlineHelpText>Populated automatically with modified date if left empty when Save.</inlineHelpText>
    <label>Price Information Date</label>
    <type>Date</type>
</CustomField>