force-app/main/default/objects/Competitor_Product_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product in related Opp Product</description>
    <formula>Opp_Product__r.Product__r.Name</formula>
    <inlineHelpText>Product in related Opp Product</inlineHelpText>
    <label>Product</label>
    <type>Text</type>
</CustomField>