force-app/main/default/objects/Competitor_Product_Price__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>