force-app/main/default/objects/Competitor_Product_Price__c/fields/Special_Price_Request_Product__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Request_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filled automatically when a new Special Price Request is created (with &quot;New SPR&quot; button from Opportunity)</description>
    <inlineHelpText>Filled automatically when a new Special Price Request is created (with &quot;New SPR&quot; button from Opportunity)</inlineHelpText>
    <label>Special Price Request Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CreatedById</field>
            <operation>equals</operation>
            <valueField>Special_Price_Request_Product__c.CreatedById</valueField>
        </filterItems>
        <infoMessage>Now only Special Price Request Products you have created are listed. Click &quot;Show all results&quot; below to show the others.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Special_Price_Request_Product__c</referenceTo>
    <relationshipLabel>Competitor Product Prices</relationshipLabel>
    <relationshipName>Competitor_Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>