force-app/main/default/objects/Competitor_Product_Price__c/fields/Total_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_USD__c</fullName>
    <description>Unit Price USD * Quantity</description>
    <formula>Unit_Price_USD__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Price USD * Quantity</inlineHelpText>
    <label>Total Price USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>