force-app/main/default/objects/Competitor_Product_Price__c/fields/Unit_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_USD__c</fullName>
    <label>Unit Price USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>