force-app/main/default/objects/Competitor_Product_Price__c/validationRules/Comment_required_if_no_price_no_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_required_if_no_price_no_quantity</fullName>
    <active>true</active>
    <errorConditionFormula>((ISBLANK(Unit_Price_USD__c)||ISBLANK(Quantity__c)||LEFT( Competitor_Product__r.Name ,7)=&quot;Unknown&quot;))&amp;&amp;ISBLANK(Comment__c)</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Please add comment if Competitor Product, Quantity or Unit Price is unknown.</errorMessage>
</ValidationRule>