force-app/main/default/objects/Competitor_Product_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>startsWith</operation>
        <value>sara</value>
    </filters>
    <label>All</label>
</ListView>